Updating Data_readability_Config

--- a/analysis/Data_Readability_Config.ipynb
+++ b/analysis/Data_Readability_Config.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4f54c50c",
+   "execution_count": 13,
+   "id": "c261e91d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from pandas_profiling import ProfileReport"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bea761ae",
+   "id": "01ce9a3d",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ebb4aa2",
+   "id": "b54622a8",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ebdf6294",
+   "id": "237115cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2fb301ef",
+   "id": "9ab2ed8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55adf589",
+   "id": "5a9b063d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b0c980c9",
+   "id": "6df86132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c3d5aaf",
+   "id": "6c15c379",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e382325f",
+   "id": "12387bc0",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bd30f534",
+   "id": "e692e686",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d598243b",
+   "id": "62fd4381",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1200,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f818a379",
+   "id": "f88914a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1208,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3fb60d9",
+   "id": "8579b8fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1216,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5b629df1",
+   "id": "75536a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab5222dd",
+   "id": "907ff20e",
    "metadata": {},
    "outputs": [],
    "source": []
