--- a/analysis/Data_Readability_Config.ipynb
+++ b/analysis/Data_Readability_Config.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c261e91d",
+   "execution_count": 1,
+   "id": "4fda4d38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01ce9a3d",
+   "id": "096986ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\nick3\\\\OneDrive\\\\desktop\\\\COSC_301\\\\Project2\\\\group07-Project\\\\analysis\\\\Sam'"
+       "'C:\\\\Users\\\\nick3\\\\OneDrive\\\\desktop\\\\COSC_301\\\\Project2\\\\group07-Project\\\\analysis'"
       ]
      },
      "execution_count": 2,
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b54622a8",
+   "id": "ac5a176d",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "237115cf",
+   "id": "710076c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ab2ed8c",
+   "id": "9156f41b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a9b063d",
+   "id": "231205e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6df86132",
+   "id": "5673860c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c15c379",
+   "id": "fb075367",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "12387bc0",
+   "id": "69d9307b",
    "metadata": {},
    "outputs": [
     {
@@ -973,8 +973,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e692e686",
+   "execution_count": 9,
+   "id": "b381afa0",
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
        "[29601 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,8 +1192,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "59e490c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Credit Limit</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Payment Score</th>\n",
+       "      <th>Avg Outstanding</th>\n",
+       "      <th>Avg Paid</th>\n",
+       "      <th>Default</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1284.000000</td>\n",
+       "      <td>114.833333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>120000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2846.166667</td>\n",
+       "      <td>833.333333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>70000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2.166667</td>\n",
+       "      <td>56447.500000</td>\n",
+       "      <td>1783.333333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>20000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>MSc or PHd</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>17693.500000</td>\n",
+       "      <td>1058.333333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>120000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>316.000000</td>\n",
+       "      <td>263.333333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29992</th>\n",
+       "      <td>210000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3.166667</td>\n",
+       "      <td>2500.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>80000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>78488.833333</td>\n",
+       "      <td>3583.333333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>11749.333333</td>\n",
+       "      <td>5216.666667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>80000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>High School Diploma</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>44435.166667</td>\n",
+       "      <td>24530.166667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30000</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>38479.000000</td>\n",
+       "      <td>1384.666667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6605 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Credit Limit Sex            Education Marital Status  Age  \\\n",
+       "1             20000   F                  BSc        Married   24   \n",
+       "2            120000   F                  BSc         Single   26   \n",
+       "14            70000   M                  BSc         Single   30   \n",
+       "17            20000   M           MSc or PHd         Single   24   \n",
+       "22           120000   F                  BSc        Married   39   \n",
+       "...             ...  ..                  ...            ...  ...   \n",
+       "29992        210000   M                  BSc        Married   34   \n",
+       "29995         80000   M                  BSc         Single   34   \n",
+       "29998         30000   M                  BSc         Single   37   \n",
+       "29999         80000   M  High School Diploma        Married   41   \n",
+       "30000         50000   M                  BSc        Married   46   \n",
+       "\n",
+       "       Payment Score  Avg Outstanding      Avg Paid Default  \n",
+       "1           0.666667      1284.000000    114.833333    True  \n",
+       "2           1.500000      2846.166667    833.333333    True  \n",
+       "14          2.166667     56447.500000   1783.333333    True  \n",
+       "17          2.333333     17693.500000   1058.333333    True  \n",
+       "22          0.000000       316.000000    263.333333    True  \n",
+       "...              ...              ...           ...     ...  \n",
+       "29992       3.166667      2500.000000      0.000000    True  \n",
+       "29995       3.000000     78488.833333   3583.333333    True  \n",
+       "29998       2.333333     11749.333333   5216.666667    True  \n",
+       "29999       0.833333     44435.166667  24530.166667    True  \n",
+       "30000       1.000000     38479.000000   1384.666667    True  \n",
+       "\n",
+       "[6605 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df[df[\"Default\"]==\"True\"]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "62fd4381",
+   "id": "f7f83b89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1201,23 +1417,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f88914a9",
+   "id": "6eb9b7c8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8579b8fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "75536a82",
+   "execution_count": 11,
+   "id": "57be66da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907ff20e",
+   "id": "a906600c",
    "metadata": {},
    "outputs": [],
    "source": []
