--- a/analysis/Nick/Untitled.ipynb
+++ b/analysis/Nick/Untitled.ipynb
@@ -1,58 +1,246 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "0620b736",
-   "metadata": {},
-   "source": [
-    "# Task 4: Analysis and Answering of Research Questions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c86e05a",
-   "metadata": {},
-   "source": [
-    "## The following questions were chosen to be answered by the exploritory data of this dataset:\n",
-    "\n",
-    "### 1: What is the most likely age for someone to default on their credit card payments?\n",
-    "### 2: How often should you pay your credit card bill to be considered a \"safe lender\"?\n",
-    "### 3: Is there any correlation to having a large credit limit and probabilty of defaulting?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b8e6ddd",
-   "metadata": {},
-   "source": [
-    "------------------------------------------------------------------------------"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c6f84bf0",
+   "execution_count": 26,
+   "id": "f083e982",
    "metadata": {},
    "outputs": [],
    "source": [
-    "    import pandas as pd\n",
-    "    import seaborn as sns\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a725fce3",
-   "metadata": {},
-   "source": [
-    "### **Question 1:** What is the most likely age for someone to default on their credit card payments?"
+    "from Scripts import FunctionScript\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "0c71abdb",
+   "execution_count": 27,
+   "id": "af439a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\nick3\\\\OneDrive\\\\Desktop\\\\COSC_301\\\\Project2\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e8ce093f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Credit Limit</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Payment_Score</th>\n",
+       "      <th>Avg_Outstanding</th>\n",
+       "      <th>Avg_Paid</th>\n",
+       "      <th>Default</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1284.000000</td>\n",
+       "      <td>114.833333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>120000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2846.166667</td>\n",
+       "      <td>833.333333</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16942.166667</td>\n",
+       "      <td>1836.333333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>38555.666667</td>\n",
+       "      <td>1398.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>18223.166667</td>\n",
+       "      <td>9841.500000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>220000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>High School Diploma</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>120891.500000</td>\n",
+       "      <td>7091.666667</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>150000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>High School Diploma</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>3530.333333</td>\n",
+       "      <td>2415.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>11749.333333</td>\n",
+       "      <td>5216.666667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>80000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>High School Diploma</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>44435.166667</td>\n",
+       "      <td>24530.166667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30000</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>38479.000000</td>\n",
+       "      <td>1384.666667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>29601 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Credit Limit Sex            Education Marital Status  Age  \\\n",
+       "1             20000   F                  BSc        Married   24   \n",
+       "2            120000   F                  BSc         Single   26   \n",
+       "3             90000   F                  BSc         Single   34   \n",
+       "4             50000   F                  BSc        Married   37   \n",
+       "5             50000   M                  BSc        Married   57   \n",
+       "...             ...  ..                  ...            ...  ...   \n",
+       "29996        220000   M  High School Diploma        Married   39   \n",
+       "29997        150000   M  High School Diploma         Single   43   \n",
+       "29998         30000   M                  BSc         Single   37   \n",
+       "29999         80000   M  High School Diploma        Married   41   \n",
+       "30000         50000   M                  BSc        Married   46   \n",
+       "\n",
+       "       Payment_Score  Avg_Outstanding      Avg_Paid Default  \n",
+       "1           0.666667      1284.000000    114.833333    True  \n",
+       "2           1.500000      2846.166667    833.333333    True  \n",
+       "3           1.000000     16942.166667   1836.333333   False  \n",
+       "4           1.000000     38555.666667   1398.000000   False  \n",
+       "5           0.666667     18223.166667   9841.500000   False  \n",
+       "...              ...              ...           ...     ...  \n",
+       "29996       1.000000    120891.500000   7091.666667   False  \n",
+       "29997       0.333333      3530.333333   2415.000000   False  \n",
+       "29998       2.333333     11749.333333   5216.666667    True  \n",
+       "29999       0.833333     44435.166667  24530.166667    True  \n",
+       "30000       1.000000     38479.000000   1384.666667    True  \n",
+       "\n",
+       "[29601 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5e306f5d",
    "metadata": {},
    "outputs": [
     {
@@ -69,53 +257,20 @@
     }
    ],
    "source": [
-    "import FunctionScript\n",
-    "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\nick3\\\\OneDrive\\\\Desktop\\\\COSC_301\\\\Project2\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")\n",
     "plt.subplots(figsize=(30, 10))\n",
-    "plot = sns.countplot(x=\"Age\", hue=\"Default\", data=df)\n",
+    "plot =sns.countplot(x=\"Age\", hue=\"Default\", data=df)\n",
     "plt.ylabel('Count of Defaults',fontsize=18)\n",
     "plt.xlabel('Age by years',fontsize=15)\n",
     "plt.title(\"What age's are most likely to default?\",fontsize=30)\n",
+    "sns.despine()\n",
+    "plot\n",
     "sns.despine()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "329c66c2",
-   "metadata": {},
-   "source": [
-    "##### This graph shows that the ages between 24 and 29 are the most likely to default on their payments. \n",
-    "##### Although it is expected, this dataset also favours this age group as they consist of the majority of the data. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f164921c",
-   "metadata": {},
-   "source": [
-    "### **Question 2:**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c1c2ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29dc6f3e",
-   "metadata": {},
-   "source": [
-    "### **Question 3:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a64c9b1",
+   "id": "00764083",
    "metadata": {},
    "outputs": [],
    "source": []
