--- a/analysis/Task4.ipynb
+++ b/analysis/Task4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0620b736",
+   "id": "622bb25d",
    "metadata": {},
    "source": [
     "# Task 4: Analysis and Answering of Research Questions"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c86e05a",
+   "id": "f9ddcf73",
    "metadata": {},
    "source": [
     "## The following questions were chosen to be answered by the exploritory data of this dataset:\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b8e6ddd",
+   "id": "70c9cb99",
    "metadata": {},
    "source": [
     "------------------------------------------------------------------------------"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c6f84bf0",
+   "id": "7e30af68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a725fce3",
+   "id": "2da74d42",
    "metadata": {},
    "source": [
     "### **Question 1:** What is the most likely age for someone to default on their credit card payments?"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0c71abdb",
+   "id": "63cbc704",
    "metadata": {},
    "outputs": [
     {
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329c66c2",
+   "id": "977b5fef",
    "metadata": {},
    "source": [
-    "##### This graph shows that the ages between 24 and 29 are the most likely to default on their payments. \n",
-    "##### Although it is expected, this dataset also favours this age group as they consist of the majority of the data. "
+    "This graph shows that the ages between 24 and 29 are the most likely to default on their payments. \n",
+    "Although it is expected, this dataset also favours this age group as they consist of the majority of the data. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f164921c",
+   "id": "95ed9839",
    "metadata": {},
    "source": [
     "### **Question 2:**"
@@ -99,14 +99,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c1c2ff",
+   "id": "7afee0a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "29dc6f3e",
+   "id": "9e737451",
    "metadata": {},
    "source": [
     "### **Question 3:**"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a64c9b1",
+   "id": "0e85866e",
    "metadata": {},
    "outputs": [],
    "source": []
