--- a/analysis/Task4.ipynb
+++ b/analysis/Task4.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5d0236b2",
    "metadata": {},
    "outputs": [],
@@ -98,11 +98,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0158ecf5",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'FunctionScript' has no attribute 'JustPayments'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14320/886744184.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mFunctionScript\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mDF\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mFunctionScript\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mJustPayments\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mDF2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFunctionScript\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDefaulters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDF\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFunctionScript\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLoadnClean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'FunctionScript' has no attribute 'JustPayments'"
+     ]
+    }
+   ],
+   "source": [
+    "import FunctionScript\n",
+    "DF = (FunctionScript.JustPayments(\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\"))\n",
+    "DF2 = FunctionScript.Defaulters(DF)\n",
+    "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")\n",
+    "plt.subplots(figsize=(20, 10))\n",
+    "ax = sns.lineplot(x=\"Credit Limit\", y=\"Payment_Score\", hue=\"Default\",data=df)\n",
+    "ax.set(xlim=(0,500000))\n",
+    "ax.set(ylim=(-.20,2.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df09b12d",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.subplots(figsize=(20, 10))\n",
+    "ax = sns.lineplot(x=\"Age\", y=\"Payment_Score\", hue=\"Default\",data=df)\n",
+    "ax.set(xlim=(20,75))\n",
+    "ax.set(ylim=(-.20,2.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47e94158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.violinplot(data=df, y='Payment_Score', x='Default').set(title='Payment defaults as a function of Past Payment \"Score\"'\n",
+    "                                                   ,xlabel='Payment Defaults)'\n",
+    "                                                   ,ylabel='Payment Score')\n",
+    "bx = sns.stripplot(x='Default',\n",
+    "                   y = 'Payment_Score',\n",
+    "                   data = df,\n",
+    "                  palette='husl', alpha=0.025)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
