--- a/analysis/Nick/Milestone1.ipynb
+++ b/analysis/Nick/Milestone1.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a95fdf3e",
+   "metadata": {},
+   "source": [
+    "For Milestone1, we simply imported our raw data and printed its head to ensure it was working properly"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6cba8348",
+   "id": "8646fb09",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
