--- a/analysis/Sam/Milestone2Task3Sam.ipynb
+++ b/analysis/Sam/Milestone2Task3Sam.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d1da9de7",
+   "metadata": {},
+   "source": [
+    "# Milestone 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7ed28fd7",
+   "execution_count": null,
+   "id": "0a5307b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
