--- a/analysis/Nick/Milestone3.ipynb
+++ b/analysis/Nick/Milestone3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72e20098",
+   "id": "53f11fcf",
    "metadata": {},
    "source": [
     "# Milestone 3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cfb1fd01",
+   "id": "e19b4169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e26bcf69",
+   "cell_type": "markdown",
+   "id": "a2d3ad43",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Task 1\n",
+    "\n",
+    "After looking through the issues from Milestone 2, many things were adjusted in milestone 2, including but not limited to:\n",
+    "- Editted and filled in all readme files to represent their respective folders.\n",
+    "- Commented code to explain my thought process.\n",
+    "- Provided more markdown text to explain the data analysis and pipeline steps that I performed.\n",
+    "- Added captions and reference for graphs to their importance.\n",
+    "- Included a few extra visuals and analysis steps.\n",
+    "\n",
+    "These changes were done directly to Milestone 2 in this repo. \n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f36e1c1f",
+   "metadata": {},
+   "source": [
+    "## Task 3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0c552086",
+   "id": "4e92e494",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "307e2773",
+   "id": "3610db51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +82,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc0ac97",
+   "id": "b4c6302d",
    "metadata": {},
    "source": [
+    "## Task 2 and 4 were done via Github and therefore are not represented in this notebook\n",
+    "\n",
     "### The data from the previous tasks seems ideal enough as is for manipulation in tableau, therefore, the data was just loaded, and copied to a csv file locally to be used in tableau."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43019442",
+   "id": "c8354474",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
