--- a/analysis/Sam/Milestone1.ipynb
+++ b/analysis/Sam/Milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "6cba8348",
    "metadata": {},
    "outputs": [
@@ -201,14 +201,19 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Importing Pandas module to read the file\n",
     "import pandas as pd\n",
-    "df = pd.read_excel(\"defaultOfCreditCardClients.xls\")\n",
+    "# Declaring Path as a string variable\n",
+    "Path=\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultOfCreditCardClients.xls\"\n",
+    "# Using Pandas to read the Path variable and load the data from an excel sheet.\n",
+    "df = pd.read_excel(Path)\n",
+    "# Print first five rows of data\n",
     "df.head()"
    ]
   }
