--- a/analysis/Nick/Milestone1.ipynb
+++ b/analysis/Nick/Milestone1.ipynb
@@ -215,8 +215,11 @@
     }
    ],
    "source": [
+    "# Importing Pandas module to read the file\n",
     "import pandas as pd\n",
+    "# Using Pandas to read the Path variable and load the data from an excel sheet.\n",
     "df = pd.read_excel(\"defaultOfCreditCardClients.xls\")\n",
+    "# Prints the first five rows of the data frame to ensure it loaded properly\n",
     "df.head()"
    ]
   }
@@ -237,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
