--- a/analysis/Justin/Milestone2.ipynb
+++ b/analysis/Justin/Milestone2.ipynb
@@ -2301,6 +2301,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f698a340-c5b2-49f2-9701-be29db8eda23",
+   "metadata": {},
+   "source": [
+    "- There seems to be an upper limit on defaults, above a certain number of average paid it is very unlikely to default\n",
+    "- As expected, the amount of defaults are greater at the lower level of payments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2152b244-f829-41c1-892d-c272c8f707ec",
    "metadata": {},
    "source": [
@@ -2414,9 +2423,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "886855ac-a802-46bb-a0f9-7bf3977ab8df",
+   "metadata": {},
+   "source": [
+    "- Females seemingly have higher credit limits than males\n",
+    "- Females tend to default at higher values than males, however males appear to default more at the lowest credit limits."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03562b3b-4968-4db5-a0fc-248b2f687d04",
+   "id": "024f1588-2a42-45af-9569-32bc422b7798",
    "metadata": {},
    "outputs": [],
    "source": []
