revised task 4 analysis

--- a/analysis/AnalysisQuestions.ipynb
+++ b/analysis/AnalysisQuestions.ipynb
@@ -235,7 +235,7 @@
    "id": "f0167cbd",
    "metadata": {},
    "source": [
-    "### **Question 3:**"
+    "### **Question 3:**  Is there any correlation to having a large credit limit and probabilty of defaulting, does gender affect it?"
    ]
   },
   {
