Update script location

--- a/analysis/AnalysisQuestions.ipynb
+++ b/analysis/AnalysisQuestions.ipynb
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "import FunctionScript\n",
+    "from Scripts import FunctionScript\n",
     "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")\n",
     "plt.subplots(figsize=(30, 10))\n",
     "plot = sns.countplot(x=\"Age\", hue=\"Default\", data=df)\n",
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "import FunctionScript\n",
+    "from Scripts import FunctionScript\n",
     "DF = (FunctionScript.JustPayments(\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\"))\n",
     "DF2 = FunctionScript.Defaulters(DF)\n",
     "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")\n",
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "import FunctionScript\n",
+    "from Scripts import FunctionScript\n",
     "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\samff\\\\Cosc301Path\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")\n",
     "plt.subplots(figsize = (30, 10))\n",
     "sns.violinplot(data = df, x= 'Credit Limit', y= 'Default', hue = 'Sex', split = True, inner = \"quartile\", scale = 'count', cut = 0)\n",
