Reviewing M3 for submission

--- a/analysis/Nick/Milestone3.ipynb
+++ b/analysis/Nick/Milestone3.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "from Scripts import FunctionScript\n",
     "df = FunctionScript.LoadnClean(\"C:\\\\Users\\\\nick3\\\\OneDrive\\\\Desktop\\\\COSC_301\\\\Project2\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\")\n",
-    "\n",
-    "df"
+    "\n"
    ]
   },
   {
@@ -29,7 +28,7 @@
     "## Task 1\n",
     "\n",
     "After looking through the issues from Milestone 2, many things were adjusted in milestone 2, including but not limited to:\n",
-    "- Editted and filled in all readme files to represent their respective folders.\n",
+    "- Edited and filled in all readme files to represent their respective folders.\n",
     "- Commented code to explain my thought process.\n",
     "- Provided more markdown text to explain the data analysis and pipeline steps that I performed.\n",
     "- Added captions and reference for graphs to their importance.\n",
@@ -93,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8354474",
+   "id": "f4e66d49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
