--- a/analysis/Sam/Milestone3.ipynb
+++ b/analysis/Sam/Milestone3.ipynb
@@ -603,6 +603,14 @@
    "source": [
     "This data will serve to be used in the makings of dashboard 2\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79620bb1",
+   "metadata": {},
+   "source": [
+    "Furthermore, included in Milestone 3 is the revision of all works prior, as such, The associated Milestone 1 & 2 files have been revised in accordance to the appropriate feedback and to increase the quality of work to further this analysis"
+   ]
   }
  ],
  "metadata": {
